samples/_failures_safe/1761165254_fcf399_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00f8ea6f.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_00f8ea6f.c:180:5: error: expected declaration or statement at end of input
  180 |     }
      |     ^
